Revision history for App-Cmd

{{$NEXT}}

0.319     2013-01-25 18:18:21 America/New_York
          Enable --help option for App::Cmd::Simple (thanks, Ryan Thompson!)

          add the ability to ignore non-commands (Thanks, Kent Fredric!)

          many improvements to tutorial (thanks, mokko!)

0.318     2012-05-04 22:00:34 America/New_York
          App::Cmd::Tester treats undef code as 0 now (thanks, David Golden)

          piles of documentation improvement also by David Golden

0.317     2012-03-26 10:11:52 America/New_York
          App::Cmd::Tester now reports exit code 1 for unknown commands, as
          App::Cmd would exit(1) in that case; addresses
          https://rt.cpan.org/Public/Bug/Display.html?id=73084 reported by
          David Golden

0.316     2012-02-11 10:50:46 America/New_York
          fix the test of "echo" on Win32 (thanks, Chris Williams)

0.315     2012-02-10 09:08:49 America/New_York
          totally worthless release made by mistake

0.314     2012-01-03 21:38:59 America/New_York
          adds App::Cmd::Tester::CaptureExternal to capture output from
          external subcommands (thanks, David Golden)

          if there's no Pod =head1 NAME, a Pod::Weaver-esque #ABSTRACT will be
          respected (thanks, Andreas Hernitscheck)

0.313     2011-12-23 13:29:53 America/New_York
          don't load Text::Abbrev until it's needed (thanks, Olivier Mengué)

0.312     2011-08-17 18:02:26 America/New_York
          typo fixes to docs (thanks, Glenn Fowler)

          add the prepare_argv method (thanks, Ingy döt Net)

0.311     2011-03-17 22:42:19 America/New_York
          require the correct version of Getopt::Long::Descriptive (thanks,
          Glen Hinkle)

0.310     2010-12-11
          classes are now loaded with Class::Load, which should avoid bugs
          where classes are not succesfully loaded by program execution
          continues anyway (thanks to Kent Fredric)
