@@ -4,6 +4,7 @@ license = Perl_5
 copyright_holder = Ricardo Signes
 
 [@RJBS]
+github_issues = 1
 
 [Prereqs]
 Getopt::Long::Descriptive = 0.084
